website/versioned_docs/version-2.1.0/quickstart/create-group.md
---
id: version-2.1.0-create-group
original_id: create-group
title: Create Group
---

This quickstart shows how to create a group.

A group is like a project group, there can be a shared volume for sharing project data within the group.
A user can be assigned to multiple groups.

1. Log in `User Portal` as an administrator and click `Admin Dashboard` to enter the dashboard.

2. Click `Groups` management on the side menu, then click `+ Add` button for the creation.

3. Input required information, such as `Name`.

4. Enable `Shared Volume` if a volume for sharing data among the group is required.
   1. Specify the `volume capacity`
   2. Enabled `Launch Group Only` if this volume is accessed only by this group.

   ![qs-create-group.png](assets/qs-create-group.png)

5. Adjust `User Quota` if resource allocation limit is required for each user.

6. Adjust `Group Quota` if resource allocation limit is required for this group.

7. Assign `Users` to this group.
    ![qs-create-group2.png](assets/qs-create-group2.png)

8. Confirm.
